# keys

./: 127.0.0.1.txt  Cargo.toml  combine.c  command.txt  for_all.c  keylogger.h  linux_main.c  macos.h  main.c  payload.c  ressources.rc  screen.h  screen_win.c  sending.c  sending.h  setup.py  subtitles.srt  test.c  test.py  win_main.c  windows.h  windows_exe.h
Update/: Cargo.toml  build.rs
Update/src/: stub.rs
Update/src/assets/: Updater_for_linux
discord/: bot.py  image.py  image_maker.py  secret.txt  serv.py  serv2.py  subtitles.srt  test.txt
discord/test/: text.txt
garbage/: linux.h  macos.h  main copy.c  mycert.crt  mycsr copy.csr  payload.c  payload_linux.h  payload_win.h  payload_windows.c  private.key  stub.sh  stub.spec
garbage/exe/: 3
keylogger/: Cargo.toml
keylogger/src/: stub.rs
keylogger/src/assets/: mycert.der  payload_linux
sending/: Cargo.toml
sending/src/: stub.rs
