[package]
name = "sending"
version = "0.1.0"
edition = "2021"


[dependencies]
winapi = { version = "0.3", features = ["winuser", "winnt", "winbase"] }
dirs = "4.0"
ureq = "2"
pnet = "0.33.0"
base64 = "0.21"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
chrono = "0.4.40"

[[bin]]
name = "sending"
path = "src/stub.rs"

[build-dependencies]
winres = "0.1"
